<resources>
    <string name="app_name">Parent App</string>
    <string name="title_children">Children</string>
    <string name="title_coin_flip">Coin flip</string>
    <string name="title_timeout">Timeout</string>

    <!--  Timeout  -->
    <string name="select_a_timer">Select a timer</string>
    <string name="custom_timer">Custom timer</string>
    <plurals name="duration_in_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <string name="remaining_time">%02d:%02d</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <integer name="min_duration">1</integer>
    <integer name="max_duration">60</integer>

    <integer-array name="preset_durations">
        <item>@integer/min_duration</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </integer-array>
    <string name="time_up">Time Is Up</string>
    <string name="dismiss">Dismiss</string>

    <!--  Timeout notification  -->
    <string name="timeout_notification_channel_name">
        Timeout timer notification
    </string>
    <string name="timeout_notification_channel_description">
        Send notification when the timeout timer ends
    </string>
    <string name="timeout_notification_title">Your timeout period is finished</string>
    <string name="timeout_notification_content">
        Tap to dismiss this notification
    </string>

    <!-- Timeout speeds -->
    <string name="timer_button_desc">Change Timer Speed</string>
    <string name="timer_speed_cue">%d\%% Speed</string>

    <!--  Add child activity  -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_child">Save Child</string>
    <string name="delete_child">Delete Child</string>
    <string name="delete_child_confirm">Are you sure you want to delete?</string>
    <string name="add_a_child">Add a child</string>
    <string name="flip_coin_btn">Flip Coin</string>
    <string name="tails_desc">Tails side</string>
    <string name="heads_desc">Heads side</string>

    <string name="save_button_title">Save</string>
    <string name="add_new_child">Add new child</string>
    <string name="edit_child">Edit child</string>
    <string name="edit_child_confirm">Do you want to save your changes?</string>

    <!--  Crop image  -->
    <string name="crop_image_activity_title">Crop image</string>
    <string name="fetch_error">Cannot fetch the icon</string>
    <string name="save_error">Cannot save the icon</string>

    <!-- Image -->
    <string name="child_image_content_description">Image of Child</string>
    <string name="edit_child_image_button">Edit Image</string>
    <string name="delete_child_image_button">Delete Image</string>

    <!-- Coin flip -->
    <string name="new_flip">New Flip</string>
    <string name="done">Done</string>
    <string name="child_selected">Child selected</string>

    <string name="head">HEAD</string>
    <string name="tail">TAIL</string>
    <string name="pick_a_child">Pick a child</string>
    <string name="pick_a_side">Pick a side</string>

    <string name="no_children">Unassigned</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="full_name_with_indicator">%1$s %2$s (last picked)</string>

    <string name="navigates_to_coin_flip">Navigates to Coin Flip</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="new_coin_flip">New coin flip</string>

    <!--  Help  -->
    <string name="help">Help</string>
    <string name="about_the_author">About the author</string>
    <string name="resources">Resources</string>
    <string name="developers">Developers</string>
    <string name="icons">Icons</string>
    <string name="external_libraries">Open-source third-party Libraries</string>
    <string name="citations">Resources</string>
    <string name="grace_humer">Grace Humer</string>
    <string name="viet_hung_nguyen">Viet-Hung Nguyen</string>
    <string name="gavin_nagra">Gavin Nagra</string>
    <string name="corbin_jensen">Corbin Jensen</string>
    <string name="about_app">Created for SFU CMPT 276 by team Fluorine.</string>
    <string name="app_icon_citation">App icon:
        <a href="https://thenounproject.com/search/?q=parent&amp;i=5036">Parent</a> by Dmitry Baranovskiy
    </string>
    <string name="coin_icon_citation">
        <a href="https://thenounproject.com/search/?q=coin%20flip&amp;i=1329029">Coin</a> by Ben Davis (with modification)
    </string>
    <string name="child_icon_citation">
        <a href="https://fontawesome.com/v5.15/icons/child?style=solid">Child</a> from Font Awesome Library
    </string>
    <string name="timer_icon_citation">
        <a href="https://fontawesome.com/v5.15/icons/stopwatch?style=solid">Timer</a> from Font Awesome Library
    </string>
    <string name="task_icon_citation">
        <a href="https://fontawesome.com/v5.15/icons/tasks?style=solid">Task</a> from Font Awesome Library
    </string>
    <string name="tachometer_icon_citation">
        <a href="https://fontawesome.com/v5.15/icons/tachometer-alt?style=solid">Tachometer</a> from Font Awesome Library
    </string>

    <string name="pulsator_citation">
        <a href="https://github.com/booncol/Pulsator4Droid">Pulsing UI Effect</a> by booncol
    </string>

    <string name="image_cropper_citation">
        <a href="https://github.com/booncol/Pulsator4Droid">Android-Image-Coppper</a> by ArthurHub
    </string>


    <string name="robot_empty_image_citation">
        <a href="https://thenounproject.com/search/?q=robot&amp;i=1749583">Robot</a> by the Adrien Coquet
    </string>

    <string name="clip_art_board_citation">
        <a href="https://www.flaticon.com/premium-icon/task_2098402">Clip Board</a> by Freepik
    </string>

    <string name="clip_art_children_citation">
        <a href="https://www.flaticon.com/premium-icon/family-member_3088419">Children</a> by Freepik
    </string>

    <string name="clip_art_coin_flip_citation">
        <a href="https://www.flaticon.com/premium-icon/coin_1540515">CoinFlip</a> by Freepik
    </string>

    <string name="clip_art_box_citation">
        <a href="https://www.flaticon.com/premium-icon/wallet_1992003">Empty Box Icon</a> by juicy_fish
    </string>

    <string name="wind_icon_citation">
        <a href="https://fontawesome.com/v5.15/icons/wind?style=solid">Wind Icon</a> by FontAwesome
    </string>


    <!--  Tasks  -->
    <string name="tasks">Tasks</string>
    <string name="crop_image">Crop image</string>
    <string name="save_task">Save Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_name">Task Name</string>
    <string name="new_task">New Task</string>
    <string name="task_details">Task Details</string>
    <string name="add_new_task">Add new task</string>
    <string name="edit_task_confirm">Do you want to save your changes?</string>
    <string name="add_task">Add a Task</string>
    <string name="photo_of_child">Photo of child</string>
    <string name="edit_task">Edit Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="complete_task_message">Next turn will be <b>%s</b></string>
    <string name="next_turn_info">Next turn: %s</string>
    <string name="next_turn">Next turn</string>
    <string name="task_history">Task History</string>
    <string name="view_task_history">View Who\'s Turn History</string>

    <!--  Empty states  -->
    <string name="empty_list">Empty list</string>
    <string name="empty_state_children_message">Tap the button on the bottom right to add a child</string>
    <string name="empty_state_coin_flip_message">Tap the button on the bottom right to flip a coin</string>
    <string name="empty_state_task_message">Tap the button on the bottom right to create a task</string>
    <string name="clip_art">Clip Arts</string>

    <!--  Calm screen  -->
    <string name="calm_title">Calm</string>
    <string name="crop_image_title">Crop Image</string>
    <string name="zen">Zen</string>
    <string name="subtract_breath">-</string>
    <string name="add_breath">+</string>
    <string name="begin">begin</string>
    <string name="breathe_again">again</string>
    <string name="breathe_finish">finish</string>
    <string name="release_button">Release the button</string>
    <string name="good_job">Good job</string>
    <string name="breath_left">%d breaths left</string>
    <string name="last_breath">Last breath</string>
    <string name="in">in</string>
    <string name="out">out</string>
    <string name="help_breathe_in">Hold button and breathe in</string>
    <string name="help_breathe_out">Time to breath out</string>
    <string name="add_a_breath">Add a breath</string>
    <string name="remove_a_breath">Remove a breath</string>

    <plurals name="breath_count">
        <item quantity="one">Let\'s take %d breath together</item>
        <item quantity="other">Let\'s take %d breaths together</item>
    </plurals>

</resources>
