<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".view.children.AddChildActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@+id/display_child_image"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_first_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_last_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/save_child"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_last_name"
        tools:layout_editor_absoluteX="119dp" />

    <Button
        android:id="@+id/button_delete_child"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/delete_child"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_child" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/display_child_image"
        style="@style/icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/child_image_content_description"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_icon" />

    <Button
        android:id="@+id/edit_child_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onChangeIconButtonClicked"
        android:text="@string/edit_child_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/display_child_image" />

    <Button
        android:id="@+id/delete_child_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onDeleteIconButtonClicked"
        android:text="@string/delete_child_image_button"
        app:layout_constraintBottom_toBottomOf="@+id/display_child_image"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
