<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".view.coin.NewCoinFlipFragment">

    <View
        android:id="@+id/first_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3333" />

    <View
        android:id="@+id/second_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6666" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/first_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/dropdown_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_children"
            android:inputType="none"
            tools:ignore="TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pick_a_child"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/dropdown_menu"
        app:layout_constraintStart_toStartOf="@+id/dropdown_menu" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pick_a_side"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/coin_side_selection"
        app:layout_constraintStart_toStartOf="@+id/coin_side_selection" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/coin_side_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:checkedButton="@+id/head"
        app:layout_constraintBottom_toTopOf="@+id/second_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_divider"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/head"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/head" />

        <Button
            android:id="@+id/tail"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tail" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/flip_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/flip_coin_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_divider" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/current_child"
        style="@style/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/next_turn"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/coin_side_selection"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:src="@drawable/robot" />

</androidx.constraintlayout.widget.ConstraintLayout>