<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".view.task.AddTaskActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/save_task"
        app:layout_constraintEnd_toEndOf="@id/task_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/task_name"
        app:layout_constraintTop_toBottomOf="@id/dropdown_menu" />

    <Button
        android:id="@+id/button_delete_task"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete_task"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_task" />

    <Button
        android:id="@+id/button_complete_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/complete_task"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_delete_task" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/task_name"
        app:layout_constraintStart_toStartOf="@+id/task_name"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <AutoCompleteTextView
            android:id="@+id/dropdown_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title_children"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/button_add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next_turn"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@+id/task_name"
        app:layout_constraintTop_toBottomOf="@+id/task_name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/current_child_photo"
        style="@style/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/next_turn"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/default_icon"
        android:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>
